@@ -1,3 +1,9 @@
+2021-11-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/ralloc.c,
+	  src/stm8/gen.c:
+	  Improve rematerialization of stack addresses.
+
 2021-11-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/tinyaes.c:
